tests/typing/good/nested1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() {
  void putchar() {}
  int x = 0;
}
