tests/typing/bad/testfile-void-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void foo() {}
int main() { int x; x = foo(); }
